--- a/RESTDemo/Base.lproj/Main.storyboard
+++ b/RESTDemo/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RESTDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2016-11-22" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="51z-Ym-Wjk">
+                                <rect key="frame" x="66" y="28" width="233" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XNu-sn-kRp">
+                                <rect key="frame" x="307" y="27" width="52" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="jTd-vo-2bW"/>
+                                </constraints>
+                                <state key="normal" title="Pobierz"/>
+                                <connections>
+                                    <action selector="updateSubstitutions:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TYW-23-ecI"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZBN-UV-hGs">
+                                <rect key="frame" x="16" y="66" width="343" height="581"/>
+                                <color key="backgroundColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Data:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPe-3s-gT6">
+                                <rect key="frame" x="16" y="31" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="XNu-sn-kRp" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="2SP-4I-VR7"/>
+                            <constraint firstItem="51z-Ym-Wjk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="FTz-V9-BTe"/>
+                            <constraint firstAttribute="bottom" secondItem="ZBN-UV-hGs" secondAttribute="bottom" constant="20" symbolic="YES" id="H4a-uM-Gf5"/>
+                            <constraint firstItem="ZBN-UV-hGs" firstAttribute="top" secondItem="51z-Ym-Wjk" secondAttribute="bottom" constant="8" symbolic="YES" id="KuX-ab-xT3"/>
+                            <constraint firstItem="TPe-3s-gT6" firstAttribute="baseline" secondItem="51z-Ym-Wjk" secondAttribute="baseline" id="M9O-ON-Ktk"/>
+                            <constraint firstItem="ZBN-UV-hGs" firstAttribute="trailing" secondItem="XNu-sn-kRp" secondAttribute="trailing" id="cad-8u-ezr"/>
+                            <constraint firstItem="51z-Ym-Wjk" firstAttribute="baseline" secondItem="XNu-sn-kRp" secondAttribute="baseline" id="gKI-k1-hsm"/>
+                            <constraint firstItem="51z-Ym-Wjk" firstAttribute="leading" secondItem="TPe-3s-gT6" secondAttribute="trailing" constant="9" id="r36-Tk-0Vx"/>
+                            <constraint firstItem="TPe-3s-gT6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="r5N-km-MF0"/>
+                            <constraint firstItem="XNu-sn-kRp" firstAttribute="leading" secondItem="51z-Ym-Wjk" secondAttribute="trailing" constant="8" symbolic="YES" id="vtY-0X-HEc"/>
+                            <constraint firstItem="ZBN-UV-hGs" firstAttribute="leading" secondItem="TPe-3s-gT6" secondAttribute="leading" id="xAF-td-Max"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textView" destination="ZBN-UV-hGs" id="P4y-tq-gth"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="102.99850074962519"/>
         </scene>
     </scenes>
 </document>
